--- a/wiki/fr/TechDraw_ExtensionPosObliqueChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionPosObliqueChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionPosObliqueChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionPosObliqueChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionPosObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungSchr&auml;geKettenma&szlig;eAnordnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionPosObliqueChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionPosObliqueChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionPosObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Allinea in Serie Quote Oblique (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionPosObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie U&#322;&oacute;&#380; uko&#347;n&#261; seri&#281; wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux cotes inclin&eacute;es ou plus.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosObliqueChainDimension.svg&amp;filetimestamp=20240707203247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosObliqueChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Aligner obliquement les cotes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner obliquement les cotes</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosHorizChainDimension.svg&amp;filetimestamp=20240707203137&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner obliquement les cotes</b> du menu.</li></ul></li>
 <li>Les cotes sont align&eacute;es et leurs textes sont centr&eacute;s.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +111,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095613
+Cached time: 20260125095633
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.191 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 26144/2097152 bytes
-Template argument size: 10484/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.119 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 26131/2097152 bytes
+Template argument size: 10471/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1421/5000000 bytes
+Unstrip post&#8208;expand size: 1425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.247      1 -total
- 21.43%    9.052      1 Template:GuiCommand/fr
- 19.76%    8.349      1 Template:TechDraw_Tools_navi/fr
- 16.89%    7.136      1 Template:Caption
- 14.43%    6.096      2 Template:Navigation_menu_2
- 12.58%    5.313      2 Template:Docnav/fr
- 12.02%    5.079      1 Template:Userdocnavi/fr
-  7.79%    3.291      1 Template:MenuCommand
-  7.48%    3.160      1 Template:Button
+100.00%   24.031      1 -total
+ 37.27%    8.956      1 Template:TechDraw_Tools_navi/fr
+ 25.73%    6.182      2 Template:Navigation_menu_2
+ 14.23%    3.420      1 Template:Userdocnavi/fr
+ 14.14%    3.397      1 Template:GuiCommand/fr
+ 11.73%    2.819      2 Template:Docnav/fr
+  8.53%    2.051      1 Template:MenuCommand
+  6.77%    1.626      1 Template:Caption
+  4.65%    1.118      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277613-0!canonical and timestamp 20260125095613 and revision id 1743535. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277613-0!canonical and timestamp 20260125095632 and revision id 1743538. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
