--- a/wiki/Arch_Roof.html
+++ b/wiki/Arch_Roof.html
@@ -191,12 +191,12 @@ The 3rd image shows the automatically generated subtraction volume.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095605
+Cached time: 20260125095644
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.150 seconds
-Real time usage: 0.166 seconds
+CPU time usage: 0.166 seconds
+Real time usage: 0.200 seconds
 Preprocessor visited node count: 1436/1000000
 Post&#8208;expand include size: 33472/2097152 bytes
 Template argument size: 11446/2097152 bytes
@@ -207,19 +207,19 @@ Unstrip post&#8208;expand size: 6415/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.472      1 -total
- 26.24%    9.047      1 Template:BIM_Tools_navi
- 24.02%    8.279      2 Template:Navigation_menu_2
- 19.60%    6.756     13 Template:PropertyData
- 15.03%    5.180     13 Template:Variable
-  9.92%    3.421      1 Template:Userdocnavi
-  7.25%    2.499      1 Template:GuiCommand
-  6.79%    2.340      2 Template:Code
-  4.87%    1.678     30 Template:Incode
-  4.62%    1.592      2 Template:Docnav
+100.00%   46.318      1 -total
+ 16.18%    7.495     13 Template:PropertyData
+ 15.96%    7.391      1 Template:BIM_Tools_navi
+ 14.35%    6.647      2 Template:Navigation_menu_2
+ 13.71%    6.348      1 Template:Userdocnavi
+ 12.73%    5.897      1 Template:GuiCommand
+ 11.80%    5.467     13 Template:Variable
+  7.11%    3.292      2 Template:Docnav
+  6.10%    2.824      2 Template:Code
+  5.50%    2.549     30 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260125095627 and revision id 1743536. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:3682-0!canonical and timestamp 20260125095644 and revision id 1743536. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
