--- a/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateHorizChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateHorizChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Erg&auml;nzungHorizontaleMa&szlig;kette (44% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHorizontaleMa&szlig;kette (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateHorizChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quote in Serie Orizzontale (44% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w poziomo (44% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w poziomo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionCreateHorizChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49688;&#54217; &#51649;&#47148; &#52824;&#49688; (44% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_VerticalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_VerticalExtentDimension.html" title="TechDraw VerticalExtentDimension/fr">Cote &eacute;tendue verticale</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/fr">Cotes verticales</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -101,7 +99,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -124,35 +122,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111133946
+Cached time: 20260125095723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 383/1000000
-Post&#8208;expand include size: 26736/2097152 bytes
-Template argument size: 10581/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 382/1000000
+Post&#8208;expand include size: 26776/2097152 bytes
+Template argument size: 10603/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1595/5000000 bytes
+Unstrip post&#8208;expand size: 1607/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.555      1 -total
- 29.69%   11.742      1 Template:TechDraw_Tools_navi/fr
- 23.31%    9.222      2 Template:Navigation_menu_2
- 15.27%    6.041      1 Template:Userdocnavi/fr
- 13.20%    5.221      1 Template:Value
-  7.99%    3.161      1 Template:GuiCommand/fr
-  7.49%    2.962      2 Template:Docnav/fr
-  6.29%    2.488      1 Template:Incode
-  5.31%    2.102      1 Template:VersionMinus/fr
-  5.00%    1.976      2 Template:Button
+100.00%   31.009      1 -total
+ 28.31%    8.779      1 Template:TechDraw_Tools_navi/fr
+ 17.21%    5.336      2 Template:Navigation_menu_2
+ 13.42%    4.160      1 Template:Userdocnavi/fr
+ 12.39%    3.841      1 Template:GuiCommand/fr
+  8.74%    2.709      2 Template:Docnav/fr
+  7.54%    2.339      1 Template:Version/fr
+  7.35%    2.278      1 Template:Value
+  5.80%    1.799      1 Template:VersionMinus/fr
+  5.20%    1.611      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260111133946 and revision id 1733812. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125095723 and revision id 1743540. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
